# pipeplan

reference/: MIGRATION.md  README.md  pipeline.schema.json  pyproject.toml
reference/examples/: master_blueprint.yaml
reference/examples/demo/: generate_data.py  run_demo.py
reference/examples/demo/data/: inventory.db  regions.json  sales.xlsx  warehouse.db
reference/examples/demo/data/_checkpoints/: clean_orders.8cab9190ea0c.parquet  enrich_orders.e29894dfcae9.parquet  filter_orders.9105d371e1b7.parquet  finalize_orders.9c7af8d88f50.parquet  normalize_customers.9bf67fff63d9.parquet  rank_orders.c2e81cd7e97c.parquet  region_rollup.920dc53b7c9f.parquet
reference/examples/demo/pipeline/: pipeline.yaml  resources.yaml  schemas.yaml  vars.yaml
reference/examples/demo/pipeline/tasks/: extract.yaml  load.yaml  transform.yaml
reference/src/pipeplan/: __init__.py  cli.py  orchestrator.py
reference/src/pipeplan/adapters/: __init__.py  base.py  db.py  factory.py  file.py
reference/src/pipeplan/ast/: __init__.py  expression.py  predicate.py
reference/src/pipeplan/config/: __init__.py  interpolation.py  loader.py  models.py
reference/src/pipeplan/core/: __init__.py  checkpoint.py  context.py  contracts.py  durations.py  exceptions.py  notify.py  registry.py  secrets.py  state.py  watermark.py
reference/src/pipeplan/tasks/: __init__.py  runner.py
reference/src/pipeplan/transforms/: __init__.py  base.py  cdc.py  collection.py  element.py  projection.py  set_ops.py
reference/tests/: test_pipeplan.py
src/: test_run.py
src/pipeplan/: core.py
src/pipeplan/adapters/: file.py
src/pipeplan/config/: interpolation.py
src/pipeplan/core/: __init__.py  checkpoint.py  context.py  contracts.py  durations.py  notify.py  registry.py  secrets.py  state.py  watermark.py
tests/: test_core_engine.py
